// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`old streams test > OR in subquery 1`] = `
{
  "buckets": [
    {
      "hash": 250528360,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 321263901,
      "partition_by": [
        {
          "hash": 414001903,
          "instantiation": [
            {
              "column": "issue_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 48226101,
      "output": [
        {
          "hash": 288876155,
          "instantiation": [
            {
              "column": "id",
            },
          ],
          "sql": "?1",
        },
      ],
      "partition_by": [
        {
          "hash": 494640796,
          "instantiation": [
            {
              "column": "owner_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
    {
      "filters": [
        {
          "hash": 157614356,
          "instantiation": [
            {
              "column": "name",
            },
          ],
          "sql": "?1 = 'test'",
        },
      ],
      "hash": 256941425,
      "output": [
        {
          "hash": 288876155,
          "instantiation": [
            {
              "column": "id",
            },
          ],
          "sql": "?1",
        },
      ],
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "hash": 142781093,
                  "instantiation": [
                    {
                      "connection": "auth",
                    },
                  ],
                  "sql": "?1 ->> '$.sub'",
                },
                "type": "request",
              },
            ],
            "lookup": 0,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [],
            "lookup": 1,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > in > on parameter data 1`] = `
{
  "buckets": [
    {
      "hash": 250528360,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 321263901,
      "partition_by": [
        {
          "hash": 414001903,
          "instantiation": [
            {
              "column": "issue_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "filters": [],
            "functionInputs": [],
            "functionName": "json_each",
            "outputs": [
              {
                "hash": 252102568,
                "instantiation": [
                  {
                    "column": "value",
                  },
                ],
                "sql": "?1",
              },
            ],
            "type": "table_valued",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > in > on parameter data and table 1`] = `
{
  "buckets": [
    {
      "hash": 452637394,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 68963601,
      "partition_by": [
        {
          "hash": 414001903,
          "instantiation": [
            {
              "column": "issue_id",
            },
          ],
          "sql": "?1",
        },
        {
          "hash": 416316124,
          "instantiation": [
            {
              "column": "label",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 48226101,
      "output": [
        {
          "hash": 288876155,
          "instantiation": [
            {
              "column": "id",
            },
          ],
          "sql": "?1",
        },
      ],
      "partition_by": [
        {
          "hash": 494640796,
          "instantiation": [
            {
              "column": "owner_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "hash": 142781093,
                  "instantiation": [
                    {
                      "connection": "auth",
                    },
                  ],
                  "sql": "?1 ->> '$.sub'",
                },
                "type": "request",
              },
            ],
            "lookup": 0,
            "type": "parameter",
          },
          {
            "filters": [],
            "functionInputs": [],
            "functionName": "json_each",
            "outputs": [
              {
                "hash": 252102568,
                "instantiation": [
                  {
                    "column": "value",
                  },
                ],
                "sql": "?1",
              },
            ],
            "type": "table_valued",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
        {
          "lookup": {
            "idInStage": 1,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > in > parameter and auth match on same column 1`] = `
{
  "buckets": [
    {
      "hash": 250528360,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 321263901,
      "partition_by": [
        {
          "hash": 414001903,
          "instantiation": [
            {
              "column": "issue_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "filters": [],
            "functionInputs": [],
            "functionName": "json_each",
            "outputs": [
              {
                "hash": 252102568,
                "instantiation": [
                  {
                    "column": "value",
                  },
                ],
                "sql": "?1",
              },
            ],
            "type": "table_valued",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "type": "intersection",
          "values": [
            {
              "expr": {
                "hash": 444402882,
                "instantiation": [
                  {
                    "connection": "subscription",
                  },
                ],
                "sql": "?1 ->> '$.' || 'issue'",
              },
              "type": "request",
            },
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 0,
              },
              "resultIndex": 0,
              "type": "lookup",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > in > parameter value in subquery 1`] = `
{
  "buckets": [
    {
      "hash": 166084671,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 95751585,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [
        {
          "hash": 102968610,
          "instantiation": [
            {
              "column": "is_admin",
            },
          ],
          "sql": "?1",
        },
      ],
      "hash": 65299060,
      "output": [],
      "partition_by": [
        {
          "hash": 288876155,
          "instantiation": [
            {
              "column": "id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "users",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "hash": 142781093,
                  "instantiation": [
                    {
                      "connection": "auth",
                    },
                  ],
                  "sql": "?1 ->> '$.sub'",
                },
                "type": "request",
              },
            ],
            "lookup": 0,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > in > row value in subquery 1`] = `
{
  "buckets": [
    {
      "hash": 250528360,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 321263901,
      "partition_by": [
        {
          "hash": 414001903,
          "instantiation": [
            {
              "column": "issue_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 48226101,
      "output": [
        {
          "hash": 288876155,
          "instantiation": [
            {
              "column": "id",
            },
          ],
          "sql": "?1",
        },
      ],
      "partition_by": [
        {
          "hash": 494640796,
          "instantiation": [
            {
              "column": "owner_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "hash": 142781093,
                  "instantiation": [
                    {
                      "connection": "auth",
                    },
                  ],
                  "sql": "?1 ->> '$.sub'",
                },
                "type": "request",
              },
            ],
            "lookup": 0,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > in > two subqueries 1`] = `
{
  "buckets": [
    {
      "hash": 310037818,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 206790411,
      "partition_by": [
        {
          "hash": 288876155,
          "instantiation": [
            {
              "column": "id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "users",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 491315879,
      "output": [
        {
          "hash": 376439996,
          "instantiation": [
            {
              "column": "user_a",
            },
          ],
          "sql": "?1",
        },
      ],
      "partition_by": [
        {
          "hash": 119268889,
          "instantiation": [
            {
              "column": "user_b",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "friends",
      },
    },
    {
      "filters": [],
      "hash": 467843732,
      "output": [
        {
          "hash": 119268889,
          "instantiation": [
            {
              "column": "user_b",
            },
          ],
          "sql": "?1",
        },
      ],
      "partition_by": [
        {
          "hash": 376439996,
          "instantiation": [
            {
              "column": "user_a",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "friends",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "hash": 142781093,
                  "instantiation": [
                    {
                      "connection": "auth",
                    },
                  ],
                  "sql": "?1 ->> '$.sub'",
                },
                "type": "request",
              },
            ],
            "lookup": 0,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "hash": 142781093,
                  "instantiation": [
                    {
                      "connection": "auth",
                    },
                  ],
                  "sql": "?1 ->> '$.sub'",
                },
                "type": "request",
              },
            ],
            "lookup": 1,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > nested subqueries 1`] = `
{
  "buckets": [
    {
      "hash": 250528360,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 321263901,
      "partition_by": [
        {
          "hash": 414001903,
          "instantiation": [
            {
              "column": "issue_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [
        {
          "hash": 102968610,
          "instantiation": [
            {
              "column": "is_admin",
            },
          ],
          "sql": "?1",
        },
      ],
      "hash": 65299060,
      "output": [
        {
          "hash": 288876155,
          "instantiation": [
            {
              "column": "id",
            },
          ],
          "sql": "?1",
        },
      ],
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "users",
      },
    },
    {
      "filters": [],
      "hash": 48226101,
      "output": [
        {
          "hash": 288876155,
          "instantiation": [
            {
              "column": "id",
            },
          ],
          "sql": "?1",
        },
      ],
      "partition_by": [
        {
          "hash": 494640796,
          "instantiation": [
            {
              "column": "owner_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [],
            "lookup": 0,
            "type": "parameter",
          },
        ],
        [
          {
            "instantiation": [
              {
                "lookup": {
                  "idInStage": 0,
                  "stageId": 0,
                },
                "resultIndex": 0,
                "type": "lookup",
              },
            ],
            "lookup": 1,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 1,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > normalization > distribute and 1`] = `
{
  "buckets": [
    {
      "hash": 489769293,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
    {
      "hash": 168834462,
      "sources": [
        1,
      ],
      "uniqueName": "stream|1",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "hash": 94872629,
          "instantiation": [
            {
              "column": "content",
            },
          ],
          "sql": ""length"(?1) > 2",
        },
      ],
      "hash": 490701732,
      "partition_by": [
        {
          "hash": 414001903,
          "instantiation": [
            {
              "column": "issue_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "hash": 94872629,
          "instantiation": [
            {
              "column": "content",
            },
          ],
          "sql": ""length"(?1) > 2",
        },
      ],
      "hash": 104023950,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 48226101,
      "output": [
        {
          "hash": 288876155,
          "instantiation": [
            {
              "column": "id",
            },
          ],
          "sql": "?1",
        },
      ],
      "partition_by": [
        {
          "hash": 494640796,
          "instantiation": [
            {
              "column": "owner_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "hash": 142781093,
                  "instantiation": [
                    {
                      "connection": "auth",
                    },
                  ],
                  "sql": "?1 ->> '$.sub'",
                },
                "type": "request",
              },
            ],
            "lookup": 0,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
    {
      "bucket": 1,
      "lookupStages": [],
      "requestFilters": [
        {
          "hash": 529186025,
          "instantiation": [
            {
              "connection": "auth",
            },
          ],
          "sql": "?1 ->> '$.' || 'is_admin'",
        },
      ],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > normalization > double negation 1`] = `
{
  "buckets": [
    {
      "hash": 250528360,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 321263901,
      "partition_by": [
        {
          "hash": 414001903,
          "instantiation": [
            {
              "column": "issue_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 48226101,
      "output": [
        {
          "hash": 288876155,
          "instantiation": [
            {
              "column": "id",
            },
          ],
          "sql": "?1",
        },
      ],
      "partition_by": [
        {
          "hash": 494640796,
          "instantiation": [
            {
              "column": "owner_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "hash": 142781093,
                  "instantiation": [
                    {
                      "connection": "auth",
                    },
                  ],
                  "sql": "?1 ->> '$.sub'",
                },
                "type": "request",
              },
            ],
            "lookup": 0,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > normalization > negated and 1`] = `
{
  "buckets": [
    {
      "hash": 250528360,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
    {
      "hash": 166530544,
      "sources": [
        1,
      ],
      "uniqueName": "stream|1",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 321263901,
      "partition_by": [
        {
          "hash": 414001903,
          "instantiation": [
            {
              "column": "issue_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "hash": 185683052,
          "instantiation": [
            {
              "column": "content",
            },
          ],
          "sql": "NOT "length"(?1) = 5",
        },
      ],
      "hash": 138342129,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 48226101,
      "output": [
        {
          "hash": 288876155,
          "instantiation": [
            {
              "column": "id",
            },
          ],
          "sql": "?1",
        },
      ],
      "partition_by": [
        {
          "hash": 494640796,
          "instantiation": [
            {
              "column": "owner_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "hash": 142781093,
                  "instantiation": [
                    {
                      "connection": "auth",
                    },
                  ],
                  "sql": "?1 ->> '$.sub'",
                },
                "type": "request",
              },
            ],
            "lookup": 0,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
    {
      "bucket": 1,
      "lookupStages": [],
      "requestFilters": [],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > normalization > negated or 1`] = `
{
  "buckets": [
    {
      "hash": 105626336,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "hash": 185683052,
          "instantiation": [
            {
              "column": "content",
            },
          ],
          "sql": "NOT "length"(?1) = 5",
        },
      ],
      "hash": 447026134,
      "partition_by": [
        {
          "hash": 414001903,
          "instantiation": [
            {
              "column": "issue_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 48226101,
      "output": [
        {
          "hash": 288876155,
          "instantiation": [
            {
              "column": "id",
            },
          ],
          "sql": "?1",
        },
      ],
      "partition_by": [
        {
          "hash": 494640796,
          "instantiation": [
            {
              "column": "owner_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "hash": 142781093,
                  "instantiation": [
                    {
                      "connection": "auth",
                    },
                  ],
                  "sql": "?1 ->> '$.sub'",
                },
                "type": "request",
              },
            ],
            "lookup": 0,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > or > parameter match or request condition 1`] = `
{
  "buckets": [
    {
      "hash": 406182990,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
    {
      "hash": 166084671,
      "sources": [
        1,
      ],
      "uniqueName": "stream|1",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 218610467,
      "partition_by": [
        {
          "hash": 494640796,
          "instantiation": [
            {
              "column": "owner_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 95751585,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "parameterIndexes": [],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "expr": {
            "hash": 142781093,
            "instantiation": [
              {
                "connection": "auth",
              },
            ],
            "sql": "?1 ->> '$.sub'",
          },
          "type": "request",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
    {
      "bucket": 1,
      "lookupStages": [],
      "requestFilters": [
        {
          "hash": 529186025,
          "instantiation": [
            {
              "connection": "auth",
            },
          ],
          "sql": "?1 ->> '$.' || 'is_admin'",
        },
      ],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > or > parameter match or row condition 1`] = `
{
  "buckets": [
    {
      "hash": 406182990,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
    {
      "hash": 369127866,
      "sources": [
        1,
      ],
      "uniqueName": "stream|1",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 218610467,
      "partition_by": [
        {
          "hash": 494640796,
          "instantiation": [
            {
              "column": "owner_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "hash": 475072616,
          "instantiation": [
            {
              "column": "name",
            },
          ],
          "sql": ""length"(?1) = 3",
        },
      ],
      "hash": 101838550,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "parameterIndexes": [],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "expr": {
            "hash": 142781093,
            "instantiation": [
              {
                "connection": "auth",
              },
            ],
            "sql": "?1 ->> '$.sub'",
          },
          "type": "request",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
    {
      "bucket": 1,
      "lookupStages": [],
      "requestFilters": [],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > or > request condition or request condition 1`] = `
{
  "buckets": [
    {
      "hash": 215141619,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 412397227,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [],
      "requestFilters": [
        {
          "hash": 250372512,
          "instantiation": [
            {
              "connection": "auth",
            },
            {
              "connection": "auth",
            },
          ],
          "sql": "?1 ->> '$.' || 'a' OR ?2 ->> 'b'",
        },
      ],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > or > row condition or parameter condition 1`] = `
{
  "buckets": [
    {
      "hash": 215141619,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
    {
      "hash": 62735874,
      "sources": [
        1,
      ],
      "uniqueName": "stream|1",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 412397227,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "hash": 426733954,
          "instantiation": [
            {
              "column": "content",
            },
          ],
          "sql": ""length"(?1) > 5",
        },
      ],
      "hash": 327762476,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [],
      "requestFilters": [
        {
          "hash": 529186025,
          "instantiation": [
            {
              "connection": "auth",
            },
          ],
          "sql": "?1 ->> '$.' || 'is_admin'",
        },
      ],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
    {
      "bucket": 1,
      "lookupStages": [],
      "requestFilters": [],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > or > row condition or row condition 1`] = `
{
  "buckets": [
    {
      "hash": 388281914,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "hash": 241673101,
          "instantiation": [
            {
              "column": "content",
            },
            {
              "column": "tagged_users",
            },
          ],
          "sql": ""length"(?1) > 5 OR "json_array_length"(?2) > 1",
        },
      ],
      "hash": 43120379,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [],
      "requestFilters": [],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > or > subquery or token parameter 1`] = `
{
  "buckets": [
    {
      "hash": 250528360,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
    {
      "hash": 215141619,
      "sources": [
        1,
      ],
      "uniqueName": "stream|1",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 321263901,
      "partition_by": [
        {
          "hash": 414001903,
          "instantiation": [
            {
              "column": "issue_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 412397227,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 48226101,
      "output": [
        {
          "hash": 288876155,
          "instantiation": [
            {
              "column": "id",
            },
          ],
          "sql": "?1",
        },
      ],
      "partition_by": [
        {
          "hash": 494640796,
          "instantiation": [
            {
              "column": "owner_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "hash": 142781093,
                  "instantiation": [
                    {
                      "connection": "auth",
                    },
                  ],
                  "sql": "?1 ->> '$.sub'",
                },
                "type": "request",
              },
            ],
            "lookup": 0,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
    {
      "bucket": 1,
      "lookupStages": [],
      "requestFilters": [
        {
          "hash": 529186025,
          "instantiation": [
            {
              "connection": "auth",
            },
          ],
          "sql": "?1 ->> '$.' || 'is_admin'",
        },
      ],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > row condition 1`] = `
{
  "buckets": [
    {
      "hash": 62735874,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "hash": 426733954,
          "instantiation": [
            {
              "column": "content",
            },
          ],
          "sql": ""length"(?1) > 5",
        },
      ],
      "hash": 327762476,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [],
      "requestFilters": [],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > row filter and stream parameter 1`] = `
{
  "buckets": [
    {
      "hash": 501751390,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "hash": 426733954,
          "instantiation": [
            {
              "column": "content",
            },
          ],
          "sql": ""length"(?1) > 5",
        },
      ],
      "hash": 199404979,
      "partition_by": [
        {
          "hash": 414001903,
          "instantiation": [
            {
              "column": "issue_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "expr": {
            "hash": 305930080,
            "instantiation": [
              {
                "connection": "subscription",
              },
            ],
            "sql": "?1 ->> '$.' || 'id'",
          },
          "type": "request",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > stream parameter 1`] = `
{
  "buckets": [
    {
      "hash": 250528360,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 321263901,
      "partition_by": [
        {
          "hash": 414001903,
          "instantiation": [
            {
              "column": "issue_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "expr": {
            "hash": 305930080,
            "instantiation": [
              {
                "connection": "subscription",
              },
            ],
            "sql": "?1 ->> '$.' || 'id'",
          },
          "type": "request",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > table alias 1`] = `
{
  "buckets": [
    {
      "hash": 270104871,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 257667422,
      "partition_by": [
        {
          "hash": 339553671,
          "instantiation": [
            {
              "column": "account_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "account_member",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 503677135,
      "output": [
        {
          "hash": 339553671,
          "instantiation": [
            {
              "column": "account_id",
            },
          ],
          "sql": "?1",
        },
      ],
      "partition_by": [
        {
          "hash": 288876155,
          "instantiation": [
            {
              "column": "id",
            },
          ],
          "sql": "?1",
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "account_member",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "hash": 142781093,
                  "instantiation": [
                    {
                      "connection": "auth",
                    },
                  ],
                  "sql": "?1 ->> '$.sub'",
                },
                "type": "request",
              },
            ],
            "lookup": 0,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > without filter 1`] = `
{
  "buckets": [
    {
      "hash": 215141619,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "data": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 412397227,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [],
      "requestFilters": [],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;
